--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -1,3 +1,16 @@
+
+/*jquery*/
+.mobile-nav { z-index: 9999; position: absolute; right: 35px; top: 100px; width: 20px; }
+.menu-btn div { position: absolute; left: 100%; top: 64%; padding-right: 8px; margin-top: -0.50em; line-height: 1.2; font-size: 18px; font-weight: 200; vertical-align: middle; z-index: 99; }
+.menu-btn span { display: block; width: 19px; height: 3px; margin: 4px 0; background: #000; z-index: 99; }
+.responsive-menu { max-height: 0; background-color: rgba(0,0,0,0.5); width: 300px; overflow: hidden; transition: all .25s; position: absolute; left: -245px; text-align: left; }
+.responsive-menu ul { padding: 20px 0 0 20px; }
+.responsive-menu ul li { padding-bottom: 20px; }
+.responsive-menu a { text-decoration: none; color: #fff;}
+.expand {max-height: 300px; }
+
+
+
 @font-face {
     font-family: Whitman-Roman;
     font-style: normal;
