--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -3494,10 +3494,10 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-24__pretitle {
-    top: 70px;
+    top: 87px;
     width: 522px;
     font-size: 34px;
-    line-height: 36px
+    line-height: 36px;
 }
 
 .section-24__title {
