--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -3575,10 +3575,10 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-26__title {
-    top: 222px;
-    left: calc(50% - 207px);
+    top: 150px;
+    left: calc(50% - 459px);
     font-family: Whitman-Roman, Arial, sans-serif;
-    font-size: 75px
+    font-size: 80px
 }
 
 .section-26__subtitle,
@@ -3712,6 +3712,11 @@ section.complete .button-next-slide-section-2 {
     height: 100vh;
 }
 
+.section-27-wrapper {
+   padding-top: 10em;
+    margin-left: 38em;
+
+}
 .section-27__background {
     position: absolute;
     top: 0;
@@ -3727,6 +3732,7 @@ section.complete .button-next-slide-section-2 {
     position: relative;
     color: #85261E;
     font-family: Whitman-Roman, Arial, sans-serif;
+
 }
 
 .section-27__pretitle {
@@ -3738,7 +3744,7 @@ section.complete .button-next-slide-section-2 {
 
 .section-27__title-1,
 .section-27__title-2 {
-    left: 260px;
+    left: 274px;
     font-size: 80px;
     line-height: 70px;
 }
@@ -3746,7 +3752,7 @@ section.complete .button-next-slide-section-2 {
 .section-27__main-content {
     position: relative;
     width: 64%;
-    margin-left: 12%;
+    /*margin-left: 12%;*/
     margin-top: 30px;
 }
 
@@ -3946,7 +3952,8 @@ section.complete .button-next-slide-section-2 {
     font-family: Roboto-Black, Arial, sans-serif;
     font-size: 18px;
     line-height: 25px;
-    text-transform: uppercase
+    text-transform: uppercase;
+    color: #19356e;
 }
 
 .section-28__text p {
@@ -4153,9 +4160,14 @@ section.complete .button-next-slide-section-2 {
     float: left;
     width: 50%;
 }
+.section29a{
+    height: max-content;
+   }
+
 
 .section-29a__image img {
     width: 100%;
+    height: 833px;
 }
 
 .section-29a__text-wrapper {
@@ -4247,17 +4259,18 @@ section.complete .button-next-slide-section-2 {
     width: 100%;
     height: 100%;
     background-color: #002a54;
-    background-image: url(../images/section-30-background.jpg);
+    background-image: url(../images/section-30-rev-conjunto-accordion.jpg);
     background-position: 0% 10%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
-    background-size: cover
+    background-size: cover;
+
 }
 
 .section-30__pretitle {
     position: relative;
     top: 10vh;
-    left: 45%;
+    left: 43%;
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 34px;
     line-height: 41px;
@@ -4265,9 +4278,12 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-30__title {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
     position: relative;
     top: 11vh;
-    left: 45%;
+    left: 42%;
     padding-left: 2%;
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 80px;
@@ -4278,17 +4294,17 @@ section.complete .button-next-slide-section-2 {
 .section-30__link-1,
 .section-30__link-2 {
     position: relative;
-    top: 25vh;
+    top: 20vh;
     left: 40%;
     font-family: Roboto-Black, Arial, sans-serif;
-    font-size: 21px;
+    font-size: 16px;
     line-height: 32px;
     color: white;
     text-transform: uppercase;
 }
 
 .section-30__link-2 {
-    top: 33vh;
+    top: 24vh;
     left: 48%;
 }
 
@@ -4300,7 +4316,7 @@ section.complete .button-next-slide-section-2 {
 
 .section-30__note {
     position: relative;
-    top: 420px;
+    top: 450px;
     left: 67.5%;
     width: 309px;
     font-size: 14px;
@@ -4509,7 +4525,7 @@ section.complete .button-next-slide-section-2 {
     width: 100%;
     height: 100%;
     background-color: #002a54;
-    background-image: url(../images/section-31-background.jpg);
+    background-image: url(../images/section-31-rev.jpg);
     background-position: center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -4529,7 +4545,7 @@ section.complete .button-next-slide-section-2 {
 .section-31__title-2 {
     position: relative;
     top: 80px;
-    left: 230px;
+    left: 331px;
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 80px;
     line-height: 70px;
