--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -1652,8 +1652,8 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-8__title {
-    /*top: 218px;
-    left: calc(50% - 337px);*/
+    top: -.1em;
+
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 80px
 }
@@ -3555,6 +3555,7 @@ section.complete .button-next-slide-section-2 {
     background: rgba(255,255,255,0.8);
 }
 
+
 .section-26 {
     z-index: -5;
     width: 100%;
@@ -3569,14 +3570,16 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-26__background {
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: #3A6D88;
 }
 
 .section-26__title {
-    top: 150px;
-    left: calc(50% - 459px);
+    position: absolute;
+    top: 1.08em;
+    left: 1.7em;
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 80px
 }
@@ -3589,8 +3592,8 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-26__subtitle {
-    top: 312px;
-    left: calc(50% - 17px);
+    top: 2.12em;
+    left: 3.24em;
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 20px;
     font-weight: 800;
@@ -3707,15 +3710,22 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-27 {
+    position: relative;
+    /*margin-top: 20%;*/
     z-index: -6;
     width: 100%;
     height: 100vh;
 }
 
 .section-27-wrapper {
-   padding-top: 10em;
-    margin-left: 38em;
+    position: absolute;
 
+
+    /*margin-left: 38em;*/
+
+}
+.container-courage {
+ width:1000px;
 }
 .section-27__background {
     position: absolute;
@@ -3724,6 +3734,10 @@ section.complete .button-next-slide-section-2 {
     width: 100%;
     height: 100%;
     background-color: #f4f4f4;
+}
+
+.section-27__title-1 {
+    position: absolute;
 }
 
 .section-27__pretitle,
@@ -3744,14 +3758,14 @@ section.complete .button-next-slide-section-2 {
 
 .section-27__title-1,
 .section-27__title-2 {
-    left: 274px;
+    left: 3.25em;
     font-size: 80px;
     line-height: 70px;
 }
 
 .section-27__main-content {
     position: relative;
-    width: 64%;
+    width: 90%;
     /*margin-left: 12%;*/
     margin-top: 30px;
 }
