--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -324,6 +324,8 @@ a {
     height: 21px
 }
 
+/*nav lines*/
+
 .button-mobile-menu span {
     position: absolute;
     left: 0;
@@ -442,6 +444,7 @@ body.page-loaded .header-top {
     width: 100%
 }
 
+
 .nav-main {
     margin-left: auto;
     padding-bottom: 12px
@@ -483,22 +486,47 @@ body.page-loaded .header-top {
     pointer-events: all;
 }
 /*jquery*/
-.mobile-nav { z-index: 9999; position: absolute; right: 35px; top: 100px; width: 20px; }
-.menu-btn div { position: absolute; left: 100%; top: 64%; padding-right: 8px; margin-top: -0.50em; line-height: 1.2; font-size: 18px; font-weight: 200; vertical-align: middle; z-index: 99; }
-.menu-btn span { display: block; width: 19px; height: 3px; margin: 4px 0; background: #000; z-index: 99; }
-.responsive-menu {
-    max-height: 0;
-    background-color: rgb(255, 255, 255);
-    width: 500px; overflow: hidden;
-    transition: all .25s;
+.mobile-nav {
+    z-index: 9999;
     position: absolute;
-    left: 0px;
-    text-align: left; }
-.responsive-menu ul { padding: 20px 0 0 20px; }
-.responsive-menu ul li { padding-bottom: 20px; }
-.responsive-menu a { text-decoration: none; color: #fff;}
-.expand {max-height: 300px; }
+    right: 42%;
+    top: 109px;
+    width: 22px;
+}
 
+.menu-btn div {
+    position: absolute;
+    left: 100%;
+    top: 64%;
+    padding-right: 8px;
+    margin-top: -0.50em;
+    line-height: 1.2;
+    font-size: 18px;
+    font-weight: 200;
+    vertical-align: middle;
+    z-index: 99;
+}
+
+.menu-btn span { display: block;
+    width: 30px;
+    height: 3px;
+    margin: 7px 0;
+    background: #812820;
+    z-index: 99;
+}
+
+
+.hideMenu {
+    text-decoration: none;
+    color: #584c47;
+    font-family: Roboto-Regular, Arial, sans-serif;
+    font-size: 13px;
+    line-height: 28px;
+}
+.hideMenu.submenu {
+    font-size: 13px;
+    font-family: "Roboto Light";
+}
 
 .header-left-nav {
     position: fixed;
@@ -515,6 +543,12 @@ body.page-loaded .header-top {
     line-height: 28px;
     z-index: 999;
     transition: left 0.33s;
+}
+
+.nav-toggled {
+
+    left: 96px;
+
 }
 /*left nav categories*/
 .header-left-nav-close {
@@ -549,7 +583,7 @@ visibility: hidden;
     left: 96px;
 }
 
-.header-left-nav span {
+.header-left-nav span, .hideMenu {
     font-family: Roboto-Black, Arial, sans-serif;
 }
 
