--- a/style-rtl.css
+++ b/style-rtl.css
@@ -533,17 +533,17 @@ table {
 /* Links
 --------------------------------------------- */
 a {
-	color: #4169e1;
+	color: #ffffff;
 }
 
 a:visited {
-	color: #800080;
+	color: #ffffff;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: #191970;
+	color: #f5f5f5;
 }
 
 a:focus {
