--- a/style.css
+++ b/style.css
@@ -128,10 +128,10 @@ pre {
 /**
  * Remove the gray background on active links in IE 10.
  */
-a {
+/* a {
 	background-color: transparent;
 }
-
+ */
 /**
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
@@ -535,9 +535,9 @@ table {
 
 /* Links
 --------------------------------------------- */
- a {
+/*  a {
 	color: #ffffff;
-}
+} */
 
 
  a:visited {
